// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic conditional extraction 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"flexDirection\\": \\"column\\"
  },
  \\"1\\": {
    \\"backgroundColor\\": \\"red\\"
  },
  \\"2\\": {
    \\"backgroundColor\\": \\"blue\\"
  },
  \\"3\\": {
    \\"flexDirection\\": \\"column\\"
  },
  \\"4\\": {
    \\"backgroundColor\\": \\"red\\"
  },
  \\"5\\": {}
});
const __withStableStyle = require('@tamagui/core')._withStableStyle;
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { YStack } from 'tamagui';
export function Test() {
  return <>
          <_ReactNativeViewWrapper expressions={[x]} />
          <_ReactNativeViewWrapper2 expressions={[x]} />
        </>;
}
const _ReactNativeViewWrapper = __withStableStyle(__ReactNativeView, (theme, _expressions) => {
  return React.useMemo(() => {
    return Object.assign({}, _sheet[\\"0\\"], _expressions[0] ? _sheet[\\"1\\"] : _sheet[\\"2\\"]);
  }, [..._expressions]);
});
const _ReactNativeViewWrapper2 = __withStableStyle(__ReactNativeView, (theme, _expressions) => {
  return React.useMemo(() => {
    return Object.assign({}, _sheet[\\"3\\"], _expressions[0] ? _sheet[\\"4\\"] : _sheet[\\"5\\"]);
  }, [..._expressions]);
});"
`;

exports[`basic extraction 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"flexDirection\\": \\"column\\",
    \\"backgroundColor\\": \\"red\\"
  }
});
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { YStack } from 'tamagui';
export function Test() {
  return <__ReactNativeView style={_sheet[\\"0\\"]} />;
}"
`;

exports[`flat transform props 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"flexDirection\\": \\"column\\"
  },
  \\"1\\": {
    \\"transform\\": [{
      \\"scale\\": 1
    }]
  },
  \\"2\\": {
    \\"transform\\": [{
      \\"scale\\": 2
    }]
  },
  \\"3\\": {
    \\"transform\\": [{
      \\"translateY\\": 20
    }, {
      \\"translateX\\": 10
    }, {
      \\"rotate\\": \\"10deg\\"
    }]
  }
});
const __withStableStyle = require('@tamagui/core')._withStableStyle;
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { YStack } from 'tamagui';
export function Test(isLoading) {
  return <_ReactNativeViewWrapper expressions={[isLoading]} />;
}
const _ReactNativeViewWrapper = __withStableStyle(__ReactNativeView, (theme, _expressions) => {
  return React.useMemo(() => {
    return Object.assign({}, _sheet[\\"0\\"], _expressions[0] ? _sheet[\\"1\\"] : _sheet[\\"2\\"], _sheet[\\"3\\"]);
  }, [..._expressions]);
});"
`;

exports[`handles style order merge properly 1`] = `
"const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { YStack } from 'tamagui';
export function Test(props) {
  return <YStack scale={props.isLoading ? 1 : 2} x={10} {...props} rotate=\\"10deg\\" />;
}"
`;

exports[`normalize dynamic values with no theme access 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"flexDirection\\": \\"column\\"
  }
});
const __withStableStyle = require('@tamagui/core')._withStableStyle;
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { YStack } from 'tamagui';
const height = 200;
export function Test(props) {
  return <_ReactNativeViewWrapper expressions={[height, props.width]} />;
}
const _ReactNativeViewWrapper = __withStableStyle(__ReactNativeView, (theme, _expressions) => {
  return React.useMemo(() => {
    return Object.assign({}, _sheet[\\"0\\"], {
      height: _expressions[0]
    }, {
      width: _expressions[1]
    });
  }, [..._expressions]);
});"
`;

exports[`normalize dynamic values with theme access and dynamic values 1`] = `
"const __withStableStyle = require('@tamagui/core')._withStableStyle;
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { YStack } from 'tamagui';
export function Test(props) {
  return <_ReactNativeViewWrapper expressions={[props.height]} />;
}
const _ReactNativeViewWrapper = __withStableStyle(__ReactNativeView, (theme, _expressions) => {
  return React.useMemo(() => {
    return Object.assign({}, {
      \\"backgroundColor\\": theme.color
    }, {
      height: _expressions[0]
    });
  }, [theme.color, ..._expressions]);
});"
`;

exports[`normalize dynamic values with theme access and dynamic values and conditional 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"flexDirection\\": \\"column\\"
  },
  \\"1\\": {
    \\"backgroundColor\\": \\"red\\"
  }
});
const __withStableStyle = require('@tamagui/core')._withStableStyle;
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { YStack } from 'tamagui';
export function Test(props) {
  return <_ReactNativeViewWrapper expressions={[props.isLoading, props.height]} />;
}
const _ReactNativeViewWrapper = __withStableStyle(__ReactNativeView, (theme, _expressions) => {
  return React.useMemo(() => {
    return Object.assign({}, _sheet[\\"0\\"], _expressions[0] ? {
      \\"bg\\": theme.color
    } : _sheet[\\"1\\"], {
      height: _expressions[1]
    });
  }, [theme.color, ..._expressions]);
});"
`;

exports[`normalize dynamic values with theme access only 1`] = `
"const __withStableStyle = require('@tamagui/core')._withStableStyle;
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { YStack } from 'tamagui';
export function Test(props) {
  return <_ReactNativeViewWrapper />;
}
const _ReactNativeViewWrapper = __withStableStyle(__ReactNativeView, (theme, _expressions) => {
  return React.useMemo(() => {
    return Object.assign({}, {
      \\"backgroundColor\\": theme.color
    });
  }, [theme.color, ..._expressions]);
});"
`;

exports[`normalize ternaries flips the conditional properly 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"marginBottom\\": 0
  },
  \\"1\\": {
    \\"marginBottom\\": 12
  }
});
const __withStableStyle = require('@tamagui/core')._withStableStyle;
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { Stack } from 'tamagui';
export function Test(props) {
  return <_ReactNativeViewWrapper expressions={[props === 123]} />;
}
const _ReactNativeViewWrapper = __withStableStyle(__ReactNativeView, (theme, _expressions) => {
  return React.useMemo(() => {
    return Object.assign({}, _expressions[0] ? _sheet[\\"0\\"] : _sheet[\\"1\\"]);
  }, [..._expressions]);
});"
`;

exports[`theme value extraction should NOT work when theme variables used 1`] = `
"const __withStableStyle = require('@tamagui/core')._withStableStyle;
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { Paragraph } from 'tamagui';
export function Test() {
  return <_ReactNativeTextWrapper>hello world</__ReactNativeText>;
}
const _ReactNativeTextWrapper = __withStableStyle(__ReactNativeText, (theme, _expressions) => {
  return React.useMemo(() => {
    return Object.assign({}, {
      \\"color\\": theme.color
    });
  }, [theme.color, ..._expressions]);
});"
`;

exports[`theme value extraction should work when no theme variables used 1`] = `
"const __ReactNativeStyleSheet = require('react-native').StyleSheet;
const _sheet = __ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"color\\": \\"red\\",
    \\"fontFamily\\": \\"Inter\\",
    \\"letterSpacing\\": 0,
    \\"fontSize\\": 14,
    \\"lineHeight\\": 23
  }
});
const __ReactNativeView = require('react-native').View;
const __ReactNativeText = require('react-native').Text;
import { Paragraph } from 'tamagui';
export function Test() {
  return <__ReactNativeText style={_sheet[\\"0\\"]}>hello world</__ReactNativeText>;
}"
`;
